--- a/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
+++ b/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\ClinicSchedule.Infrastructure\ClinicSchedule.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
