--- a/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
+++ b/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
