--- a/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
+++ b/src/ClinicSchedule.Web/ClinicSchedule.Web.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
